--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Jeana's CSCI 103 Website
-subtitle: This is where I will display my intellectual fruit.
+subtitle: Think garden, but with intellectual fruit.
 ---
