--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Jeana's CSCI 103 Website
-subtitle: Think garden, but with intellectual fruit.
+subtitle: My garden of intellectual fruit
 ---
